--- a/styles/styles.css
+++ b/styles/styles.css
@@ -104,12 +104,13 @@ h3,
 h4,
 h5,
 h6 {
-  margin-top: 0.8em;
+  margin-top: 1.2em;
   margin-bottom: 0.25em;
   font-family: var(--heading-font-family);
   font-weight: 600;
   line-height: 1.25;
   scroll-margin: 40px;
+  color: green;
 }
 
 h1 { font-size: var(--heading-font-size-xxl); }
